[project]
name = "urssi-pixi-demo"
version = "0.1.0"
description = "Add a short description here"
authors = [{name = "kachinga silwimba", email = "kachingasilwimba@u.boisestate.edu"}]
requires-python = ">= 3.11"
dependencies = []

[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[tool.pixi.project]
channels = ["conda-forge"]
platforms = ["osx-arm64"]

[tool.pixi.pypi-dependencies]
urssi-pixi-demo = { path = ".", editable = true }

[tool.pixi.tasks]
